fix: explore card overflow on mobile devices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,8 +5,6 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --max-height-screen-nav: calc(100dvh - 4rem);
-
   --color-border: hsl(var(--border));
   --color-input: hsl(var(--input));
   --color-ring: hsl(var(--ring));
@@ -55,6 +53,11 @@
 
   --animate-accordion-down: accordion-down 0.2s ease-out;
   --animate-accordion-up: accordion-up 0.2s ease-out;
+
+  --spacing-card-height: 34rem;
+  --spacing-sidebar-width: 14rem;
+  --spacing-mobile-nav-height: 4rem;
+  --spacing-svh-without-nav: calc(100svh - var(--spacing-mobile-nav-height));
 
   @keyframes accordion-down {
     from {
